dts: stm32: alignment with v4.19-stm32mp-r2
Device tree alignment with the latest kernel delivery v4.19-stm32mp-r2

Signed-off-by: Patrick Delaunay <patrick.delaunay@st.com>
Change-Id: Ib10a27589a5fb36c22c276f12a5d2b67daf1f3e2
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/133369
Reviewed-by: CITOOLS <smet-aci-reviews@lists.codex.cro.st.com>

--- a/arch/arm/dts/stm32mp157c-ed1.dts
+++ b/arch/arm/dts/stm32mp157c-ed1.dts
@@ -8,7 +8,6 @@
 #include "stm32mp157c.dtsi"
 #include "stm32mp157c-m4-srm.dtsi"
 #include "stm32mp157caa-pinctrl.dtsi"
-#include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/mfd/st,stpmic1.h>
 
 / {
@@ -337,6 +336,7 @@
 	interrupt-parent = <&exti>;
 	interrupts = <68 1>;
 	interrupt-names = "wdg";
+	wakeup-source;
 	recovery;
 	status = "okay";
 };
@@ -344,6 +344,7 @@
 &pwr {
 	pwr-regulators {
 		vdd-supply = <&vdd>;
+		vdd_3v3_usbfs-supply = <&vdd_usb>;
 	};
 };
 
