--- a/arch/arm/dts/stm32mp157a-dk1.dts
+++ b/arch/arm/dts/stm32mp157a-dk1.dts
@@ -9,7 +9,6 @@
 #include "stm32mp157c.dtsi"
 #include "stm32mp157c-m4-srm.dtsi"
 #include "stm32mp157cac-pinctrl.dtsi"
-#include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/mfd/st,stpmic1.h>
 
@@ -127,11 +126,11 @@
 
 &adc {
 	pinctrl-names = "default";
-	pinctrl-0 = <&adc12_usb_pwr_pins_a>;
+	pinctrl-0 = <&adc12_ain_pins_a>, <&adc12_usb_pwr_pins_a>;
 	vdd-supply = <&vdd>;
 	vdda-supply = <&vdd>;
 	vref-supply = <&vrefbuf>;
-	status = "okay";
+	status = "disabled";
 	adc1: adc@0 {
 		/*
 		 * Type-C USB_PWR_CC1 & USB_PWR_CC2 on in18 & in19.
@@ -140,13 +139,13 @@
 		 * Use arbitrary margin here (e.g. 5µs).
 		 */
 		st,min-sample-time-nsecs = <5000>;
-		/* ANA0, ANA1, USB Type-C CC1 & CC2 */
-		st,adc-channels = <0 1 18 19>;
+		/* AIN connector, USB Type-C CC1 & CC2 */
+		st,adc-channels = <0 1 6 13 18 19>;
 		status = "okay";
 	};
 	adc2: adc@100 {
-		/* ANA0, ANA1, temp sensor, USB Type-C CC1 & CC2 */
-		st,adc-channels = <0 1 12 18 19>;
+		/* AIN connector, temp sensor, USB Type-C CC1 & CC2 */
+		st,adc-channels = <0 1 2 6 12 18 19>;
 		/* temperature sensor min sample time */
 		st,min-sample-time-nsecs = <10000>;
 		status = "okay";
@@ -301,7 +300,7 @@
 		typec_con: connector {
 			compatible = "usb-c-connector";
 			label = "USB-C";
-			power-role = "sink";
+			power-role = "dual";
 			power-opmode = "default";
 		};
 	};
@@ -452,6 +451,15 @@
 	};
 };
 
+&i2c5 {
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&i2c5_pins_a>;
+	pinctrl-1 = <&i2c5_pins_sleep_a>;
+	/delete-property/dmas;
+	/delete-property/dma-names;
+	status = "disabled";
+};
+
 &i2s2 {
 	clocks = <&rcc SPI2>, <&rcc SPI2_K>, <&rcc PLL3_Q>, <&rcc PLL3_R>;
 	clock-names = "pclk", "i2sclk", "x8k", "x11k";
@@ -500,6 +508,7 @@
 	interrupt-parent = <&exti>;
 	interrupts = <68 1>;
 	interrupt-names = "wdg";
+	wakeup-source;
 	recovery;
 	status = "okay";
 };
@@ -507,6 +516,7 @@
 &pwr {
 	pwr-regulators {
 		vdd-supply = <&vdd>;
+		vdd_3v3_usbfs-supply = <&vdd_usb>;
 	};
 };
 
@@ -575,6 +585,18 @@
 	status = "okay";
 };
 
+&sdmmc3 {
+	pinctrl-names = "default", "opendrain", "sleep";
+	pinctrl-0 = <&sdmmc3_b4_pins_a>;
+	pinctrl-1 = <&sdmmc3_b4_od_pins_a>;
+	pinctrl-2 = <&sdmmc3_b4_sleep_pins_a>;
+	broken-cd;
+	st,neg-edge;
+	bus-width = <4>;
+	vmmc-supply = <&v3v3>;
+	status = "disabled";
+};
+
 &spi4 {
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&spi4_pins_a>;
@@ -593,6 +615,7 @@
 	/* spare dmas for other usage */
 	/delete-property/dmas;
 	/delete-property/dma-names;
+	status = "disabled";
 	pwm {
 		pinctrl-0 = <&pwm1_pins_a>;
 		pinctrl-1 = <&pwm1_sleep_pins_a>;
@@ -607,6 +630,7 @@
 &timers3 {
 	/delete-property/dmas;
 	/delete-property/dma-names;
+	status = "disabled";
 	pwm {
 		pinctrl-0 = <&pwm3_pins_a>;
 		pinctrl-1 = <&pwm3_sleep_pins_a>;
@@ -621,6 +645,7 @@
 &timers4 {
 	/delete-property/dmas;
 	/delete-property/dma-names;
+	status = "disabled";
 	pwm {
 		pinctrl-0 = <&pwm4_pins_a &pwm4_pins_b>;
 		pinctrl-1 = <&pwm4_sleep_pins_a &pwm4_sleep_pins_b>;
@@ -635,6 +660,7 @@
 &timers5 {
 	/delete-property/dmas;
 	/delete-property/dma-names;
+	status = "disabled";
 	pwm {
 		pinctrl-0 = <&pwm5_pins_a>;
 		pinctrl-1 = <&pwm5_sleep_pins_a>;
@@ -659,6 +685,7 @@
 &timers12 {
 	/delete-property/dmas;
 	/delete-property/dma-names;
+	status = "disabled";
 	pwm {
 		pinctrl-0 = <&pwm12_pins_a>;
 		pinctrl-1 = <&pwm12_sleep_pins_a>;
@@ -702,8 +729,7 @@
 };
 
 &usbotg_hs {
-	dr_mode = "peripheral";
-	force-b-session-valid;
+	extcon = <&typec>;
 	phys = <&usbphyc_port1 0>;
 	phy-names = "usb2-phy";
 	status = "okay";
