dts: stm32: alignment with v4.19-stm32mp-r3
Device tree alignment with Kernel v4.19-stm32mp-r3

Change-Id: I30f44f7f4c0558c17ba6106668e6aaa593809507
Signed-off-by: Patrice Chotard <patrice.chotard@st.com>
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/145708
Reviewed-by: CITOOLS <smet-aci-reviews@lists.codex.cro.st.com>

--- a/arch/arm/dts/stm32mp157c-ev1.dts
+++ b/arch/arm/dts/stm32mp157c-ev1.dts
@@ -98,7 +98,7 @@
 		};
 	};
 
-	sound {
+	sound: sound {
 		compatible = "audio-graph-card";
 		label = "STM32MP1-EV";
 		routing =
@@ -325,7 +325,7 @@
 		};
 	};
 
-	panel-dsi@0 {
+	panel_dsi: panel-dsi@0 {
 		compatible = "raydium,rm68200";
 		reg = <0>;
 		reset-gpios = <&gpiof 15 GPIO_ACTIVE_LOW>;
@@ -495,6 +495,7 @@
 	gt9147: goodix_ts@5d {
 		compatible = "goodix,gt9147";
 		reg = <0x5d>;
+		panel = <&panel_dsi>;
 		status = "okay";
 
 		irq-gpios = <&stmfx_pinctrl 14 GPIO_ACTIVE_HIGH>;
@@ -647,8 +648,9 @@
 };
 
 &spdifrx {
-	pinctrl-names = "default";
+	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&spdifrx_pins_a>;
+	pinctrl-1 = <&spdifrx_pins_a>;
 	status = "okay";
 
 	spdifrx_port: port {
