dts: stm32: alignment with v4.19-stm32mp-r2.4
Device tree alignment with the latest kernel delivery v4.19-stm32mp-r2.4

Signed-off-by: Patrick Delaunay <patrick.delaunay@st.com>
Change-Id: I23f44856b0e2cd15492bf3295b6f3df87f8d35f6
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/152032
Reviewed-by: CITOOLS <smet-aci-reviews@lists.codex.cro.st.com>
Reviewed-by: CIBUILD <smet-aci-builds@lists.codex.cro.st.com>

--- a/arch/arm/dts/stm32mp157c-ev1.dts
+++ b/arch/arm/dts/stm32mp157c-ev1.dts
@@ -647,9 +647,8 @@
 };
 
 &spdifrx {
-	pinctrl-names = "default", "sleep";
+	pinctrl-names = "default";
 	pinctrl-0 = <&spdifrx_pins_a>;
-	pinctrl-1 = <&spdifrx_sleep_pins_a>;
 	status = "okay";
 
 	spdifrx_port: port {
@@ -717,6 +716,7 @@
 	pinctrl-0 = <&usart3_pins_a>;
 	pinctrl-1 = <&usart3_sleep_pins_a>;
 	pinctrl-2 = <&usart3_idle_pins_a>;
+	st,hw-flow-ctrl;
 	status = "disabled";
 };
 
