--- a/arch/arm/dts/stm32mp157c.dtsi
+++ b/arch/arm/dts/stm32mp157c.dtsi
@@ -1060,7 +1060,7 @@
 			interrupts = <GIC_SPI 19 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 21 IRQ_TYPE_LEVEL_HIGH>;
 			interrupt-names = "int0", "int1";
-			clocks = <&rcc CK_HSE>, <&rcc FDCAN_K>;
+			clocks = <&rcc FDCAN>, <&rcc FDCAN_K>;
 			clock-names = "hclk", "cclk";
 			bosch,mram-cfg = <0x0 0 0 32 0 0 2 2>;
 			status = "disabled";
@@ -1073,7 +1073,7 @@
 			interrupts = <GIC_SPI 20 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 22 IRQ_TYPE_LEVEL_HIGH>;
 			interrupt-names = "int0", "int1";
-			clocks = <&rcc CK_HSE>, <&rcc FDCAN_K>;
+			clocks = <&rcc FDCAN>, <&rcc FDCAN_K>;
 			clock-names = "hclk", "cclk";
 			bosch,mram-cfg = <0x1400 0 0 32 0 0 2 2>;
 			status = "disabled";
@@ -1095,14 +1095,14 @@
 			#dma-cells = <4>;
 			st,mem2mem;
 			dma-requests = <8>;
-			dmas = <&mdma1 0 0x11 0x1200000a 0x48000008 0x00000020 1>,
-			       <&mdma1 1 0x11 0x1200000a 0x48000008 0x00000800 1>,
-			       <&mdma1 2 0x11 0x1200000a 0x48000008 0x00200000 1>,
-			       <&mdma1 3 0x11 0x1200000a 0x48000008 0x08000000 1>,
-			       <&mdma1 4 0x11 0x1200000a 0x4800000C 0x00000020 1>,
-			       <&mdma1 5 0x11 0x1200000a 0x4800000C 0x00000800 1>,
-			       <&mdma1 6 0x11 0x1200000a 0x4800000C 0x00200000 1>,
-			       <&mdma1 7 0x11 0x1200000a 0x4800000C 0x08000000 1>;
+			dmas = <&mdma1 0 0x3 0x1200000a 0x48000008 0x00000020 1>,
+			       <&mdma1 1 0x3 0x1200000a 0x48000008 0x00000800 1>,
+			       <&mdma1 2 0x3 0x1200000a 0x48000008 0x00200000 1>,
+			       <&mdma1 3 0x3 0x1200000a 0x48000008 0x08000000 1>,
+			       <&mdma1 4 0x3 0x1200000a 0x4800000C 0x00000020 1>,
+			       <&mdma1 5 0x3 0x1200000a 0x4800000C 0x00000800 1>,
+			       <&mdma1 6 0x3 0x1200000a 0x4800000C 0x00200000 1>,
+			       <&mdma1 7 0x3 0x1200000a 0x4800000C 0x08000000 1>;
 			dma-names = "ch0", "ch1", "ch2", "ch3", "ch4", "ch5", "ch6", "ch7";
 		};
 
@@ -1122,14 +1122,14 @@
 			#dma-cells = <4>;
 			st,mem2mem;
 			dma-requests = <8>;
-			dmas = <&mdma1 8 0x11 0x1200000a 0x48001008 0x00000020 1>,
-			       <&mdma1 9 0x11 0x1200000a 0x48001008 0x00000800 1>,
-			       <&mdma1 10 0x11 0x1200000a 0x48001008 0x00200000 1>,
-			       <&mdma1 11 0x11 0x1200000a 0x48001008 0x08000000 1>,
-			       <&mdma1 12 0x11 0x1200000a 0x4800100C 0x00000020 1>,
-			       <&mdma1 13 0x11 0x1200000a 0x4800100C 0x00000800 1>,
-			       <&mdma1 14 0x11 0x1200000a 0x4800100C 0x00200000 1>,
-			       <&mdma1 15 0x11 0x1200000a 0x4800100C 0x08000000 1>;
+			dmas = <&mdma1 8 0x3 0x1200000a 0x48001008 0x00000020 1>,
+			       <&mdma1 9 0x3 0x1200000a 0x48001008 0x00000800 1>,
+			       <&mdma1 10 0x3 0x1200000a 0x48001008 0x00200000 1>,
+			       <&mdma1 11 0x3 0x1200000a 0x48001008 0x08000000 1>,
+			       <&mdma1 12 0x3 0x1200000a 0x4800100C 0x00000020 1>,
+			       <&mdma1 13 0x3 0x1200000a 0x4800100C 0x00000800 1>,
+			       <&mdma1 14 0x3 0x1200000a 0x4800100C 0x00200000 1>,
+			       <&mdma1 15 0x3 0x1200000a 0x4800100C 0x08000000 1>;
 			dma-names = "ch0", "ch1", "ch2", "ch3", "ch4", "ch5", "ch6", "ch7";
 		};
 
@@ -1308,6 +1308,13 @@
 
 			interrupt-controller;
 			#interrupt-cells = <3>;
+
+			wakeup-gpios = <&gpioa 0 GPIO_ACTIVE_HIGH>,
+				       <&gpioa 2 GPIO_ACTIVE_HIGH>,
+				       <&gpioc 13 GPIO_ACTIVE_HIGH>,
+				       <&gpioi 8 GPIO_ACTIVE_HIGH>,
+				       <&gpioi 11 GPIO_ACTIVE_HIGH>,
+				       <&gpioc 1 GPIO_ACTIVE_HIGH>;
 
 			pwr-regulators {
 				compatible = "st,stm32mp1,pwr-reg";
@@ -1655,7 +1662,7 @@
 			interrupts = <GIC_SPI 80 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&rcc HASH1>;
 			resets = <&rcc HASH1_R>;
-			dmas = <&mdma1 31 0x10 0x1000A02 0x0 0x0 0x0>;
+			dmas = <&mdma1 31 0x2 0x1000A02 0x0 0x0 0x0>;
 			dma-names = "in";
 			dma-maxburst = <2>;
 			status = "disabled";
@@ -1690,22 +1697,22 @@
 			      <0x89010000 0x1000>,
 			      <0x89020000 0x1000>;
 			interrupts = <GIC_SPI 48 IRQ_TYPE_LEVEL_HIGH>;
-			dmas = <&mdma1 20 0x10 0x12000A02 0x0 0x0 0>,
-			       <&mdma1 20 0x10 0x12000A08 0x0 0x0 0>,
-			       <&mdma1 21 0x10 0x12000A0A 0x0 0x0 0>;
+			dmas = <&mdma1 20 0x2 0x12000A02 0x0 0x0 0>,
+			       <&mdma1 20 0x2 0x12000A08 0x0 0x0 0>,
+			       <&mdma1 21 0x2 0x12000A0A 0x0 0x0 0>;
 			dma-names = "tx", "rx", "ecc";
 			clocks = <&rcc FMC_K>;
 			resets = <&rcc FMC_R>;
 			status = "disabled";
 		};
 
-		qspi: qspi@58003000 {
+		qspi: spi@58003000 {
 			compatible = "st,stm32f469-qspi";
 			reg = <0x58003000 0x1000>, <0x70000000 0x10000000>;
 			reg-names = "qspi", "qspi_mm";
 			interrupts = <GIC_SPI 92 IRQ_TYPE_LEVEL_HIGH>;
-			dmas = <&mdma1 22 0x10 0x100002 0x0 0x0 0x0>,
-			       <&mdma1 22 0x10 0x100008 0x0 0x0 0x0>;
+			dmas = <&mdma1 22 0x2 0x100002 0x0 0x0 0x0>,
+			       <&mdma1 22 0x2 0x100008 0x0 0x0 0x0>;
 			dma-names = "tx", "rx";
 			clocks = <&rcc QSPI_K>;
 			resets = <&rcc QSPI_R>;
